--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,8 +5,10 @@ GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=EHardwareClass::Desktop
-DefaultGraphicsPerformance=EGraphicsPreset::Maximum
+TargetedHardwareClass=Desktop
+AppliedTargetedHardwareClass=Desktop
+DefaultGraphicsPerformance=Maximum
+AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -23,3 +25,18 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/GDWTutorial")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/GDWTutorial")
+
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=7AE49612471601D84858209685D2C819
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
